--- a/StoreApp/Areas/Admin/Views/Role/Index.cshtml
+++ b/StoreApp/Areas/Admin/Views/Role/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<IdentityRole>
 
-<div class="text-center">
+<div class="text-center my-3">
 	<div class="display-6">Roles</div>
 	<div class="d-flex justify-content-end my-3">
 		<a class="btn btn-outline-success" asp-action="Create">
